fix header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ input[type='number'] {
     top: 0;
     width: 100%;
     height: 80px; 
-    z-index: 1500;
+    z-index: 1000;
 }
 
 .nav-area a, .auth-area a {
